--- a/contact.css
+++ b/contact.css
@@ -679,3 +679,9 @@ path.two {
     color: black;
   }
 }
+
+@media (max-width: 450px) {
+  .educationelements {
+    font-size: 60px;
+  }
+}
